--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,6 +22,18 @@ header {
   justify-content: center;
 }
 
+video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 1;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  transform: translate(-50%, -50%);
+}
+
 .headerintro {
   width: 36rem;
   background-color: white;
