--- a/src/css/style.css
+++ b/src/css/style.css
@@ -459,7 +459,6 @@ h2 {
   background-size: cover;
   height: 108rem;
   width: 100vw;
-  margin-top: 5rem;
   left: 0;
 }
 
@@ -871,6 +870,7 @@ footer {
   .parallaxItem6 {
     background-image: url(../assets/img/nico2_75.jpg);
     height: 57.6rem;
+    background-position: center;
   }
 }
 
@@ -1109,6 +1109,7 @@ footer {
   .parallaxItem6 {
     background-image: url(../assets/img/nico2_50.jpg);
     height: 38.4rem;
+    background-position: center;
   }
 }
 
@@ -1196,6 +1197,7 @@ footer {
   .parallaxItem6 {
     background-image: url(../assets/img/nico2_25.jpg);
     height: 19.2rem;
+    background-position: right;
   }
 
   /*.parallaxSection5 {
@@ -1208,6 +1210,17 @@ footer {
 .react-mount {
   width: 100%;
   height: 100%;
+}
+
+.react-mount4 {
+  position: absolute;
+  margin-top: 5rem;
+  margin-left: 5rem;
+}
+
+.albums {
+  height: 35rem;
+  border: 1px solid red;
 }
 
 .sliders {
